<resources>
    <string name="start_floatingBall">Turn on suspension</string>
    <string name="app_name">FunctionTest</string>
    <string name="wifi_btn">WIFICON</string>
    <string name="camera_btn">CAMERA</string>
    <string name="record_btn">RECORD</string>
    <string name="play_btn">\u0008PLAY\u0008\u0008\u0008</string>
    <string name="touch_btn">\u0008TOUCH\u0008</string>
    <string name="display_btn">DISPLAY</string>
    <string name="play_rec_btn">PLAY&amp;REC</string>
    <string name="IPERF_btn">\u0008\u0008\u0008IPERF\u0008\u0008\u0008\u0008\u0008</string>
    <string name="reset_btn">RESET</string>

    <string name="start_record_btn">START RECORD</string>
    <string name="stop_record_btn">STOP RECORD</string>
    <string name="play_record_btn">PLAY</string>
    <string name="pause_btn">PAUSE</string>
    <string name="stop_btn">STOP</string>

    <string name="ok">The recording file has finished playing.</string>

    <string name="delete_all_file">DELETE ALL FILE</string>


    <string name="wifi_manager">WIFI management</string>
    <string name="wifi_address">WIFI address：</string>
    <string name="wifi_throughput_show">Throughput:</string>
    <string name="wifi_signal_strength">Signal：</string>
    <string name="wifi_service">Server</string>
    <string name="wifi_client">Client</string>
    <string name="wifi_hint">Note: When performing the throughput test for the first time, please exit the entire application and then enter</string>

    <string name="switch_description">The switch is turned on for the server mode and the switch is turned off for the client mode.</string>

    <string name="play_1khz">1KHZ</string>
    <string name="play_channel">PLAY CHANNEL</string>
    <string name="play_left">PLAY LEFT</string>
    <string name="play_right">PLAY RIGHT</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="skip_silent_zone">Skip silent zone</string>
    <string name="skip_silent_zone_des">Only the \'with\' sound part is recorded.
        Parts recorded below [Threshold] are considered to be silent noise and will not be written to the recording file.
        The resulting recording file will be very compact.</string>

    <string name="document_manager">Files</string>
    <string name="bluetooth_transmission">BLUETOOTH</string>
    <string name="wifi_transmission">TRANSMISSION</string>


    <string name="wlan_enabled">WLAN服务已开启</string>
    <string name="wlan_disabled">WLAN服务未开启</string>
    <string name="pls_check_network_state">请检查您的网络设置</string>
    <string name="fail_to_start_http_service">启动HTTP服务失败</string>
    <string name="retrofit_wlan_address">正在获取地址...</string>
    <string name="pls_input_the_following_address_in_pc_browser">请在电脑浏览器地址栏完整输入</string>
    <string name="cancel">取消</string>
    <string name="set_network">设置网络</string>
    <string name="http_address">http://%1$s:%2$d</string>




</resources>
