<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/wifi_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/wifi_btn"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_5" />
            <Button
                android:id="@+id/camera_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/camera_btn"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/record_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/record_btn"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/play_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/play_1khz"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/touch_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/touch_btn"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/display_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/display_btn"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/play_rec_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/play_rec_btn"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/iperf_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/IPERF_btn"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/play_left_channel"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/play_left"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/play_channel"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/play_channel"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/play_right_channel"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/play_right"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
        </LinearLayout>




        <Button
            android:id="@+id/reset_btn"
            android:layout_height="@dimen/padding_64"
            android:layout_width="match_parent"
            android:text="@string/reset_btn"
            android:layout_margin="@dimen/padding_5"
            android:textSize="@dimen/text_size24"
            android:textColor="@color/selector_text_color"
            android:background="@drawable/selector_base_fillet_border_bg"
            android:layout_weight="1"/>
        <!--<TextView
            android:id="@+id/ip_address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="IP Address: 192.168.1.1"
            android:textSize="@dimen/text_size22"
            android:layout_marginLeft="@dimen/padding_20"
            android:layout_marginTop="@dimen/padding_50"
            android:textColor="@color/btn_bg_color"/>-->
        <!--添加文件管理蓝牙Wi-Fi传输-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/document_manager"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/document_manager"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bluetooth_transmission"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/bluetooth_transmission"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/wifi_transmission"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/wifi_transmission"
                android:layout_margin="@dimen/padding_5"
                android:textSize="@dimen/text_size24"
                android:textColor="@color/selector_text_color"
                android:background="@drawable/selector_base_fillet_border_bg"
                android:layout_weight="1"/>
        </LinearLayout>


        <TextView
            android:id="@+id/txt_throughput"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size22"
            android:layout_marginLeft="@dimen/padding_20"
            android:layout_marginTop="@dimen/padding_50"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>