<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/titlebar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/start_record_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/start_record_btn"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size24"
                android:background="@drawable/button_bg"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_5"/>
            <Button
                android:id="@+id/stop_record_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="wrap_content"
                android:text="@string/stop_record_btn"
                android:layout_margin="@dimen/padding_5"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size24"
                android:background="@drawable/button_bg"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/record_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size24"
            android:textColor="@color/btn_bg_color"
            android:layout_margin="@dimen/padding_10"
            android:text="file address:"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_60"
            android:weightSum="3">
            <Button
                android:id="@+id/pause_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="match_parent"
                android:text="@string/pause_btn"
                android:layout_margin="@dimen/padding_5"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size24"
                android:background="@drawable/button_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/play_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="match_parent"
                android:text="@string/play_record_btn"
                android:layout_margin="@dimen/padding_5"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size24"
                android:background="@drawable/button_bg"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/stop_play_btn"
                android:layout_height="@dimen/padding_64"
                android:layout_width="match_parent"
                android:text="@string/stop_btn"
                android:layout_margin="@dimen/padding_5"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size24"
                android:background="@drawable/button_bg"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/delete_all_file"
            android:layout_height="@dimen/padding_64"
            android:layout_width="match_parent"
            android:text="@string/delete_all_file"
            android:layout_margin="@dimen/padding_5"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size24"
            android:background="@drawable/button_bg"
            android:layout_weight="1"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>