<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_menu_view_background"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/popup_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wlan_enabled"
        android:textSize="@dimen/text_size33" />

    <TextView
        android:id="@+id/popup_menu_subtitle"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/pls_check_network_state"
        android:textSize="@dimen/text_size24"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/shared_wifi_state"
        android:layout_width="@dimen/padding_100"
        android:layout_height="@dimen/padding_100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/shared_wifi_enable" />

    <TextView
        android:id="@+id/shared_wifi_state_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/pls_input_the_following_address_in_pc_browser"
        android:textSize="@dimen/text_size24" />

    <TextView
        android:id="@+id/shared_wifi_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="http://10.100.9.195:8081"
        android:textColor="@color/colorWifiConnected"
        android:textSize="@dimen/text_size22" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shared_wifi_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size30"/>

        <View
            android:id="@+id/shared_wifi_button_split_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/shared_wifi_settings"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/set_network"
            android:textSize="@dimen/text_size30"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>